@@ -12,6 +12,7 @@ PostGIS 2.4.6
   - #4206, Fix support for PostgreSQL 12 dev branch (Laurenz Albe)
   - #3457, Fix raster envelope shortcut in ST_Clip (Sai-bot)
   - #4215, Use floating point compare in ST_DumpAsPolygons (Darafei Praliaskouski)
+  - #4059, #4177, Remove use of variable length arrays
 
 
 PostGIS 2.4.5
